pxc/tests/test_47_expand/empty1.px
namespace empty1;
import common -;
import meta::common m;

function void test1()
{
  expand (i : m::list{"x", "y"}) { // error: empty base expression
  }
}

test1();

